# util_tools

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_deploy.sh  build_config.sh  deploy.sh  deps_config.sh  deps_scenario.sh  external_config.sh  file_utils.sh  log.sh
numbers_average/: CMakeLists.txt  main.cpp
numbers_mixer/: CMakeLists.txt  main.cpp
numbers_transform/: .gitignore  CMakeLists.txt  main.cpp
